Coding work done

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -64,10 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#importing some useful packages\n",
@@ -88,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#reading in an image\n",
@@ -141,14 +137,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
-    "\n",
+    "#Calculate the theta and rho given [x1, y1, x2, y2]\n",
+    "def calLinePara(line):\n",
+    "    x1, y1, x2, y2 = line[0]  \n",
+    "    theta = 0\n",
+    "    rho = 0\n",
+    "    if y1==y2:\n",
+    "        theta = np.pi/2\n",
+    "        rho = y1\n",
+    "    else:\n",
+    "        theta = np.arctan((x2-x1)/(y1-y2)) \n",
+    "        x_cross = x1 - y1*((x1-x2)/(y1-y2))\n",
+    "        rho = abs(x_cross * np.cos(theta))\n",
+    "        if x_cross < 0:\n",
+    "            rho = - rho\n",
+    "    return  (theta,rho)\n",
+    "def linesFusion(lines, imshape):\n",
+    "    line_bucket = []\n",
+    "    for line in lines:\n",
+    "        theta, rho = calLinePara(line)\n",
+    "        #Remove line unlinkly to be traffic lane according to theta\n",
+    "        if np.pi/2.8>theta>np.pi/6 or -np.pi/6>theta>-np.pi/2.8:\n",
+    "            line_bucket.append(np.append([[theta, rho]], line))\n",
+    "    line_bucket.sort(key=lambda a:a[0])#sort lines on theta\n",
+    "    theta_cluster = []\n",
+    "    theta_avg = 999\n",
+    "    count = 0\n",
+    "    #group lines of close theta together\n",
+    "    for line in line_bucket:\n",
+    "        if abs(line[0] - theta_avg)>np.pi/15:#unlikely to be the same lane\n",
+    "            theta_cluster.append([line])\n",
+    "            theta_avg = line[0]\n",
+    "            count = 1\n",
+    "        else:#likely to be the same lane\n",
+    "            theta_cluster[-1].append(line)\n",
+    "            theta_avg = (theta_avg*count+line[0])/(count+1)\n",
+    "            count+=1\n",
+    "    line_cluster = []\n",
+    "    for theta_lines in theta_cluster:\n",
+    "        theta_lines_temp = np.array(theta_lines)\n",
+    "        #average the theta and rho\n",
+    "        theta_avg = np.average(theta_lines_temp[:,0])\n",
+    "        rho_avg = np.average(theta_lines_temp[:,1])\n",
+    "        #extraplate the lane to reach ROI boundary\n",
+    "        y_min = int(330/540*imshape[0])\n",
+    "        y_max = imshape[0]\n",
+    "        x_min = min(max(int(rho_avg/np.cos(theta_avg)-np.tan(theta_avg)*y_min),0),imshape[1])\n",
+    "        x_max = min(max(int(rho_avg/np.cos(theta_avg)-np.tan(theta_avg)*y_max),0),imshape[1])\n",
+    "        line_cluster.append([[x_min,y_min,x_max,y_max]]) \n",
+    "    return np.array(line_cluster)\n",
+    "        \n",
     "def grayscale(img):\n",
     "    \"\"\"Applies the Grayscale transform\n",
     "    This will return an image with only one color channel\n",
@@ -193,7 +236,7 @@
     "    return masked_image\n",
     "\n",
     "\n",
-    "def draw_lines(img, lines, color=[255, 0, 0], thickness=2):\n",
+    "def draw_lines(img, lines, color=[255, 0, 0], thickness=5):\n",
     "    \"\"\"\n",
     "    NOTE: this is the function you might want to use as a starting point once you want to \n",
     "    average/extrapolate the line segments you detect to map out the full\n",
@@ -222,7 +265,9 @@
     "    \"\"\"\n",
     "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len, maxLineGap=max_line_gap)\n",
     "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
-    "    draw_lines(line_img, lines)\n",
+    "    if lines is not None:\n",
+    "        lines = linesFusion(lines,img.shape)\n",
+    "        draw_lines(line_img, lines)\n",
     "    return line_img\n",
     "\n",
     "# Python 3 has support for cool math symbols.\n",
@@ -255,13 +300,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.listdir(\"test_images/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reading in an image\n",
+    "image = mpimg.imread('test_images/whiteCarLaneSwitch.jpg')\n",
+    "\n",
+    "#printing out some stats and plotting\n",
+    "print('This image is:', type(image), 'with dimensions:', image.shape)\n",
+    "plt.imshow(image) "
    ]
   },
   {
@@ -283,14 +340,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Build your pipeline that will draw lane lines on the test_images\n",
-    "# then save them to the test_images_output directory."
+    "# then save them to the test_images_output directory.\n",
+    "\n",
+    "import os \n",
+    "def selectColor(ori_image):\n",
+    "    hsv_img = cv2.cvtColor(ori_image, cv2.COLOR_RGB2HSV)\n",
+    "    color_mask = ((hsv_img[:,:,2]>160)&(hsv_img[:,:,1]<=20))|\\\n",
+    "                 ((hsv_img[:,:,2]>160)&(hsv_img[:,:,0]>20)&(hsv_img[:,:,0]<30))\n",
+    "    selected_img = np.copy(ori_image)\n",
+    "    selected_img[np.logical_not(color_mask)] = 0\n",
+    "    selected_img[color_mask] = [255,255,255]\n",
+    "    return selected_img\n",
+    "def laneFinder(ori_image):\n",
+    "    rho = 1\n",
+    "    theta = np.pi/180 \n",
+    "    threshold = 40    \n",
+    "    min_line_length = 20\n",
+    "    max_line_gap = 5\n",
+    "    imshape = ori_image.shape\n",
+    "    v1_x_ratio = 120/960\n",
+    "    v2_x_ratio = 440/960\n",
+    "    v2_v3_y_ratio = 330/540\n",
+    "    v3_x_ratio = 550 / 960\n",
+    "    v4_x_ratio = 900 / 960\n",
+    "    v1 = (imshape[1]*v1_x_ratio, imshape[0])\n",
+    "    v2 = (imshape[1]*v2_x_ratio, v2_v3_y_ratio*imshape[0])\n",
+    "    v3 = (imshape[1]*v3_x_ratio, v2_v3_y_ratio*imshape[0])\n",
+    "    v4 = (imshape[1]*v4_x_ratio, imshape[0])\n",
+    "    vertices = np.array([[v1,v2,v3,v4]], dtype=np.int32)\n",
+    "    processed_img = ori_image\n",
+    "    processed_img = selectColor(processed_img)\n",
+    "    processed_img = grayscale(processed_img)\n",
+    "    #check_img = cv2.cvtColor(processed_img, cv2.COLOR_GRAY2RGB)\n",
+    "    processed_img = gaussian_blur(processed_img,5)\n",
+    "    processed_img = canny(processed_img, 50,150)\n",
+    "    processed_img = region_of_interest(processed_img, vertices)\n",
+    "    processed_img = hough_lines(processed_img, rho, theta, threshold, min_line_length, max_line_gap)\n",
+    "    processed_img = weighted_img(processed_img,ori_image, α=0.5)\n",
+    "    return processed_img\n",
+    "file_path = 'test_images/'\n",
+    "img_files = [os.path.join(file_path, f) for f in os.listdir(file_path) if os.path.isfile(os.path.join(file_path, f))]\n",
+    "for img in img_files:\n",
+    "    if not os.path.exists('test_images_output/'):\n",
+    "        os.mkdir('test_images_output/')\n",
+    "    out_img_name = os.path.join('test_images_output/', os.path.basename(img))\n",
+    "    mpimg.imsave(out_img_name, laneFinder(mpimg.imread(img)))\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture('test_videos/challenge.mp4')\n",
+    "f_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "f_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "\n",
+    "# Define the codec and create VideoWriter object\n",
+    "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
+    "out = cv2.VideoWriter('test_videos/challenge.avi',fourcc, fps, (f_width,f_height))\n",
+    "\n",
+    "while(cap.isOpened()):\n",
+    "    ret, frame = cap.read()\n",
+    "    if ret==True:\n",
+    "        out.write(cv2.cvtColor(laneFinder(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)), cv2.COLOR_RGB2BGR))\n",
+    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "out.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -320,9 +450,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -334,16 +464,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def process_image(image):\n",
     "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
     "    # TODO: put your pipeline here,\n",
     "    # you should return the final output (image where lines are drawn on lanes)\n",
-    "\n",
+    "    result = laneFinder(image)\n",
     "    return result"
    ]
   },
@@ -356,11 +491,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video test_videos_output/solidWhiteRight.mp4\n",
+      "[MoviePy] Writing video test_videos_output/solidWhiteRight.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████▋| 221/222 [00:07<00:00, 30.76it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/solidWhiteRight.mp4 \n",
+      "\n",
+      "Wall time: 7.52 s\n"
+     ]
+    }
+   ],
    "source": [
     "white_output = 'test_videos_output/solidWhiteRight.mp4'\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
@@ -382,11 +541,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/solidWhiteRight.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
@@ -415,11 +589,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video test_videos_output/solidYellowLeft.mp4\n",
+      "[MoviePy] Writing video test_videos_output/solidYellowLeft.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████▉| 681/682 [00:22<00:00, 30.55it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/solidYellowLeft.mp4 \n",
+      "\n",
+      "Wall time: 22.7 s\n"
+     ]
+    }
+   ],
    "source": [
     "yellow_output = 'test_videos_output/solidYellowLeft.mp4'\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
@@ -435,9 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "HTML(\"\"\"\n",
@@ -469,11 +665,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video test_videos_output/challenge.mp4\n",
+      "[MoviePy] Writing video test_videos_output/challenge.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 251/251 [00:16<00:00, 15.27it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/challenge.mp4 \n",
+      "\n",
+      "Wall time: 17.1 s\n"
+     ]
+    }
+   ],
    "source": [
     "challenge_output = 'test_videos_output/challenge.mp4'\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
@@ -489,9 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "HTML(\"\"\"\n",
@@ -500,6 +718,13 @@
     "</video>\n",
     "\"\"\".format(challenge_output))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -519,9 +744,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
