--- a/P1.ipynb
+++ b/P1.ipynb
@@ -394,7 +394,7 @@
     "# then save them to the test_images_output directory.\n",
     "\n",
     "import os \n",
-    "def selectColor(ori_image):\n",
+    "def selectColor(ori_image):#Filter out unwanted colored pixels\n",
     "    hsv_img = cv2.cvtColor(ori_image, cv2.COLOR_RGB2HSV)\n",
     "    color_mask = ((hsv_img[:,:,2]>200)&(hsv_img[:,:,1]<=20))|\\\n",
     "                 ((hsv_img[:,:,2]>200)&(hsv_img[:,:,0]>20)&(hsv_img[:,:,0]<30))\n",
@@ -442,18 +442,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture('test_videos/solidYellowLeft.mp4')\n",
+    "cap = cv2.VideoCapture('test_videos/challenge.mp4')\n",
     "f_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
     "f_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
     "fps = cap.get(cv2.CAP_PROP_FPS)\n",
     "\n",
     "# Define the codec and create VideoWriter object\n",
     "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
-    "out = cv2.VideoWriter('test_videos/solidYellowLeft.avi',fourcc, fps, (f_width,f_height))\n",
+    "out = cv2.VideoWriter('test_videos_output/challenge.mp4',fourcc, fps, (f_width,f_height))\n",
     "\n",
     "while(cap.isOpened()):\n",
     "    ret, frame = cap.read()\n",
