--- a/P1.ipynb
+++ b/P1.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +157,7 @@
     "        if x_cross < 0:\n",
     "            rho = - rho\n",
     "    return  (theta,rho)\n",
+    "#Combine line segmentation \n",
     "def linesFusion(lines, imshape):\n",
     "    line_bucket = []\n",
     "    for line in lines:\n",
@@ -394,7 +395,8 @@
     "# then save them to the test_images_output directory.\n",
     "\n",
     "import os \n",
-    "def selectColor(ori_image):#Filter out unwanted colored pixels\n",
+    "#Filter out unwanted colored pixels\n",
+    "def selectColor(ori_image):\n",
     "    hsv_img = cv2.cvtColor(ori_image, cv2.COLOR_RGB2HSV)\n",
     "    color_mask = ((hsv_img[:,:,2]>200)&(hsv_img[:,:,1]<=20))|\\\n",
     "                 ((hsv_img[:,:,2]>200)&(hsv_img[:,:,0]>20)&(hsv_img[:,:,0]<30))\n",
@@ -428,45 +430,17 @@
     "    processed_img = hough_lines(processed_img, rho, theta, threshold, min_line_length, max_line_gap)\n",
     "    processed_img = weighted_img(processed_img,ori_image, α=0.5)\n",
     "    return processed_img\n",
-    "file_path = 'test_images/'\n",
-    "img_files = [os.path.join(file_path, f) for f in os.listdir(file_path) if os.path.isfile(os.path.join(file_path, f))]\n",
-    "for img in img_files:\n",
-    "    dir_name = \"test_images_output\"\n",
-    "    if not os.path.exists(dir_name):\n",
-    "        os.mkdir(dir_name)\n",
-    "    out_img_name = os.path.join(dir_name, os.path.basename(img))\n",
-    "    mpimg.imsave(out_img_name, laneFinder(mpimg.imread(img)))\n",
+    "def annotateImg():\n",
+    "    file_path = 'test_images/'\n",
+    "    img_files = [os.path.join(file_path, f) for f in os.listdir(file_path) if os.path.isfile(os.path.join(file_path, f))]\n",
+    "    for img in img_files:\n",
+    "        dir_name = \"test_images_output\"\n",
+    "        if not os.path.exists(dir_name):\n",
+    "            os.mkdir(dir_name)\n",
+    "        out_img_name = os.path.join(dir_name, os.path.basename(img))\n",
+    "        mpimg.imsave(out_img_name, laneFinder(mpimg.imread(img)))\n",
     "    \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cap = cv2.VideoCapture('test_videos/challenge.mp4')\n",
-    "f_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "f_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
-    "\n",
-    "# Define the codec and create VideoWriter object\n",
-    "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
-    "out = cv2.VideoWriter('test_videos_output/challenge.mp4',fourcc, fps, (f_width,f_height))\n",
-    "\n",
-    "while(cap.isOpened()):\n",
-    "    ret, frame = cap.read()\n",
-    "    if ret==True:\n",
-    "        out.write(cv2.cvtColor(laneFinder(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)), cv2.COLOR_RGB2BGR))\n",
-    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "            break\n",
-    "    else:\n",
-    "        break\n",
-    "\n",
-    "cap.release()\n",
-    "out.release()\n",
-    "cv2.destroyAllWindows()"
    ]
   },
   {
